# bitwit

./: .gitignore  api_server.py  get_ngrok_url.py  main.py  pyproject.toml  requirements.txt  start_dev.sh
bitwit_website/: package-lock.json  package.json  tailwind.config.js
bitwit_website/public/: generated_images
bitwit_website/scripts/: ensure_build_symlinks.py
bitwit_website/src/: App.js  ControlPanelPage.css  ControlPanelPage.js  ConversationFeedPage.js  LandingPage.js  index.css  index.js
src/bitwit_ai/: __main__.py  application.py  config_manager.py
src/bitwit_ai/bots/: bot_agent.py  content_pipeline.py  message_formatter.py
src/bitwit_ai/clients/: __init__.py  gemini_client.py  gemini_client_back.py  gemini_client_back2.py  telegram_client.py  x_client.py
src/bitwit_ai/data_storage/: db_manager.py  models.py
src/bitwit_ai/utilities/: file_utils.py  reset_app.py
src/configs/: model_definitions.py
tests/integration/: test_content_generation_integration.py  test_real_database_operations.py  test_telegram_client.py
